# AgentVCR

./: .gitignore  LICENSE  README.md  pyproject.toml  selfcheck.py
agent_vcr/: cli.py  mcp_proxy.py  model_proxy.py  tape.py  wiring.py
benchmarks/: overhead.py
docs/superpowers/plans/: 2026-07-20-agent-vcr.md
docs/superpowers/specs/: 2026-07-20-agent-vcr-design.md
